# tutoring-platform

./: .env.example  .gitignore  AGENTS.md  BOUNDARIES.md  CONTEXT.md  GLOSSARY.md  HANDOFF.md  PRODUCT-DECISION-SHEET.md  PRODUCT-GRILLING.md  README.md  package.json
backend/: pyproject.toml
backend/app/: __init__.py  application_context.py  authentication.py  bootstrap_tutor.py  config.py  database.py  generate_tutor_login_link.py  invitations.py  main.py  occupancy.py  pilot_data.py  session_requests.py
backend/app/authentication/: __init__.py  magic_links.py  rate_limits.py  session_creation.py  session_queries.py  session_security.py
backend/app/availability/: __init__.py  blocked.py  overrides.py  records.py  slots.py
backend/app/bookings/: __init__.py  calendar_export.py  cancellation.py  complimentary.py  queries.py  shared.py  student_changes.py  student_creation.py  tutor_calendar.py  tutor_operations.py
backend/app/checkout/: __init__.py  creation.py  provider.py  status.py  webhooks.py
backend/app/funding/: __init__.py  adjustments.py  errors.py  (+2 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_authentication.py  test_availability.py  test_bookings.py  test_checkout.py  test_configuration.py  test_errors.py  test_inquiries.py  test_invitation_claim.py  test_invitation_lifecycle.py  test_invitations.py  test_lesson_notes.py  test_login_requests.py  test_module_sizes.py  test_pilot_data_deletion.py  test_readiness.py  test_refunds.py  test_session_request_retirement.py  test_session_requests.py  test_students.py  test_tutor_settings.py
(+195 files in other folders)
