[project]
name = "tutoring-platform-backend"
version = "0.1.0"
description = "API for the single-Tutor platform"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5,<2",
    "cryptography>=45,<46",
    "fastapi>=0.116.1,<0.117",
    "pydantic-settings>=2.10.1,<3",
    "sqlalchemy>=2.0.43,<3",
    "uvicorn>=0.35.0,<0.36",
]

[dependency-groups]
test = [
    "httpx>=0.28.1,<0.29",
    "pytest>=8.3.4,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
